# nnodely

./: BRANCHING_COMMITS.md  CODE_STYLE.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: training.ipynb
mplplots/: plots.py
nnodely/: __init__.py  nnodely.py
nnodely/basic/: model.py  modeldef.py  relation.py
nnodely/exporter/: export.py  reporter.py
nnodely/layers/: arithmetic.py  fir.py  fuzzify.py  input.py  interpolation.py  output.py  parameter.py  part.py  rungekutta.py  timeoperation.py
nnodely/operators/: composer.py  exporter.py  loader.py  network.py  trainer.py  validator.py
nnodely/support/: jsonutils.py  utils.py
nnodely/visualizer/: mplnotebookvisualizer.py  mplvisualizer.py  textvisualizer.py
nnodely/visualizer/dynamicmpl/: resultsplot.py  trainingplot.py
tests/: __init__.py  test_dataset.py  test_export_recurrent.py  test_json.py  test_model_predict.py  test_model_predict_recurrent.py  test_network_element.py  test_parameters_of_train.py  test_results.py  test_train.py  test_train_recurrent.py  test_visualizer.py
tests/get_samples_data/: data.csv
